--- a/birligimiz.html
+++ b/birligimiz.html
@@ -310,7 +310,7 @@ html, body {
                     <div class="prsnImg" style="background-image: url(uyeler/chp.webp); width: 95%; height: 50%; background-size: cover; margin-top: 5px; border-radius: 10px 10px 0px 0px;"></div>
                     
                     <div class="prsnDetail" style="margin-top:-3px; height: 50%;">
-                        <h3 class="persnName">İsmail Küçük</h3>
+                        <h3 class="persnName">Metin Küçük</h3>
                         <p style="margin-top:-15px;" >Parti İçi Örgütlenmeden Sorumlu Başkan Yardımcısı</p>
                         <!--<p style="margin-top:-8px; font-size: 12px;" >+49 1723 232 23</p>-->
                         <!--<p style="margin-top:-8px; font-size: 12px;" >email: ayfer@baslik.com</p>-->
