--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ html, body {
         <div class="headerFrame"></div>
 
         <div class="mainImgFrame">
-            <a href="https://www.chpdusseldorfcevresi.de/calismalar" style="height: 75%;width: 100%;"><div class="imgFrame" id="imgFrame"></div></a>
+            <a href="https://chpdusseldorfcevresi.de/calismalar" style="height: 75%;width: 100%;"><div class="imgFrame" id="imgFrame"></div></a>
             <p class="calismaDate" id="calismaDate" style="margin-left: 10px;">02.04.2023</p>
             <h2 class="calismaTitle" id="calismaTitle" style="font-family: GothamBold; text-transform: capitalize; margin-left: 10px;margin-top: -10px;">Hoş Geldin..!</h2>
             <p class="calismaText" id="calismaText" style="font-family: Gotham; margin-top: -15px; color: rgb(59, 59, 59); margin-left: 10px;">Sen de bize katıl ve yeni yüzyılda Türkiye'yi birlikte inşaa edelim!</p>
@@ -249,7 +249,7 @@ html, body {
 
                 <div class="line2" style="margin-bottom: 30px;"></div>
 
-                <a href="https://www.chpdusseldorfcevresi.de/bizekatil" target="_blank" class="bizeKtlBttn">BİZE KATIL!</a>
+                <a href="https://chpdusseldorfcevresi.de/bizekatil" target="_blank" class="bizeKtlBttn">BİZE KATIL!</a>
                 
                 <p>Geçmişin Mirasıyla Yeni Yüzyıl'da Umut, Huzur, Adalet Dolu</p>
                 <p style="margin-top: -10px;" class="bizekatiltext">Türkiye'yi Birlikte İnşaa Edelim!</p>
