--- a/birligimiz.html
+++ b/birligimiz.html
@@ -211,7 +211,7 @@ html, body {
 
             <div class="mFrame2">
                 <div class="type">
-                    <div class="prsnImg" style="background-image: url(uyeler/baskan.webp); width: 95%; height: 50%; background-size: cover; margin-top: 5px; border-radius: 10px 10px 0px 0px;"></div>
+                    <div class="prsnImg" style="background-image: url(uyeler/chp.webp); width: 95%; height: 50%; background-size: cover; margin-top: 5px; border-radius: 10px 10px 0px 0px;"></div>
                     
                     <div class="prsnDetail" style="margin-top:-3px; height: 50%;">
                         <h3 class="persnName">Ayfer Başlık</h3>
