--- a/index.html
+++ b/index.html
@@ -306,9 +306,9 @@ html, body {
     
                 <div class="iletismDetails" style="margin-left: 25px; width: 60%; height: 70%;">
                     <h2 style="color: var(--mavi); margin-left: 10px; font-family: Gotham;text-decoration: underline; margin-bottom:-10px ; text-shadow: rgb(255, 255, 255) 1px 0 10px;">İletişim</h2>
-                    <p style="margin-left: 10px; font-family: Gotham; margin-bottom: -10px; text-shadow: rgb(255, 255, 255) 1px 0 10px;">Büromuz geçici olarak kapalıdır.</p>
+                    <p style="margin-left: 10px; font-family: Gotham; margin-bottom: -10px; text-shadow: rgb(255, 255, 255) 1px 0 10px;">Büromuz en kısa zamanda tekrardan hizmetinize açılacaktır.</p>
                     <span></span>
-                    <p style="margin-left: 10px; font-family: Gotham; text-shadow: rgb(255, 255, 255) 1px 0 10px;">Emscherstraße 215, 47166 Duisburg</p>
+                    <p style="margin-left: 10px; font-family: Gotham; text-shadow: rgb(255, 255, 255) 1px 0 10px;">--</p>
                     <span></span>
                     <a  style="color: black;text-decoration: none;margin-left: 10px; font-family: Gotham;font-weight: 500; text-shadow: rgb(255, 255, 255) 1px 0 10px;" href="tel:+49 1575 4274895">Tel.: +49 1575 4274895</a><p></p>
                     <a  style="color: black;text-decoration: none;margin-left: 10px; font-family: Gotham; margin-bottom: -10px;font-weight: 500; text-shadow: rgb(255, 255, 255) 1px 0 10px;" href="mailto:chpdusseldorfvecevresibirligi@gmail.com">Email: chpdusseldorfvecevresibirligi @gmail.com</a>
