--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ html, body {
 
         display: grid;
         grid-template-columns: auto;
-        grid-template-rows: 20vh 60vh 45vh 45vh 35vh 70vh 10vh;
+        grid-template-rows: 20vh 60vh 60vh 45vh 35vh 70vh 10vh;
         grid-template-areas: 
         "header"
         "main"
@@ -240,7 +240,7 @@ html, body {
 
         <div class="canliFrame">
             <h2 style="font-family: GothamBold;">Canlı Yayın - Anayasa Mitingi 14 Ocak Pazar günü saat 11.00 #sahipçıkıyoruz</h2>
-            <iframe width="80%" height="90%" src="https://www.youtube.com/embed/I6KM73QZfaA?si=HiU35HAinMje4ZXT&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="90%" src="https://www.youtube.com/embed/I6KM73QZfaA?si=_7DXz3BtNZ6AFeiK" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
             <div class="line2" style="margin-top: 30px;"></div>
         </div>
 
@@ -308,7 +308,7 @@ html, body {
                     <h2 style="color: var(--mavi); margin-left: 10px; font-family: Gotham;text-decoration: underline; margin-bottom:-10px ; text-shadow: rgb(255, 255, 255) 1px 0 10px;">İletişim</h2>
                     <p style="margin-left: 10px; font-family: Gotham; margin-bottom: -10px; text-shadow: rgb(255, 255, 255) 1px 0 10px;">Büromuz en kısa zamanda tekrardan hizmetinize açılacaktır.</p>
                     <span></span>
-                    <p style="margin-left: 10px; font-family: Gotham; text-shadow: rgb(255, 255, 255) 1px 0 10px;">---</p>
+                    <p style="margin-left: 10px; font-family: Gotham; text-shadow: rgb(255, 255, 255) 1px 0 10px;">--</p>
                     <span></span>
                     <a  style="color: black;text-decoration: none;margin-left: 10px; font-family: Gotham;font-weight: 500; text-shadow: rgb(255, 255, 255) 1px 0 10px;" href="tel:+49 1575 4274895">Tel.: +49 1575 4274895</a><p></p>
                     <a  style="color: black;text-decoration: none;margin-left: 10px; font-family: Gotham; margin-bottom: -10px;font-weight: 500; text-shadow: rgb(255, 255, 255) 1px 0 10px;" href="mailto:chpdusseldorfvecevresibirligi@gmail.com">Email: chpdusseldorfvecevresibirligi @gmail.com</a>
