--- a/bizekatil.html
+++ b/bizekatil.html
@@ -174,7 +174,7 @@ html, body {
 
             <div class="mFrame2">
                 <a class="type" style="background-image: url(assets/chpbayrak-blur.webp);" href="https://chat.whatsapp.com/DQoLxJ5MWLp5vQmlxGFVLR" target="_blank">Haberdar Ol</a>
-                <a class="type uye" style="background-image: url(assets/fdsfsdfsd.webp);" href="https://forms.gle/zVFxUC58WnfgF1NC6">Üye Ol</a>
+                <a class="type uye" style="background-image: url(assets/fdsfsdfsd.webp);" href="https://forms.gle/zVFxUC58WnfgF1NC6" target="_blank">Üye Ol</a>
                 <a class="type" style="background-image: url(assets/sdfdsfds.webp);" href="https://forms.gle/V64HhvZ9EoLVEvWo8" target="_blank">Gönüllü Ol</a>
             </div>
         </div>
