--- a/calisma.html
+++ b/calisma.html
@@ -126,7 +126,7 @@ html, body {
         <div class="mainFrame">
            <div class="calismaFrame">
                 <div class="calismaImg" id="calismaImg"></div>
-                <video id="calismaVid" src="" type="video/mp4" controls></video>
+                <video class="calismaImg" id="calismaVid" src="" type="video/mp4" controls></video>
                 <p class="calismaDate" id="calismaDate" style="color: gray; font-size: 12px;"></p>
                 <h3 class="calismaTitle" id="calismaTitle" style="font-family: GothamBold;"></h3>
                 <p class="calismaText" id="calismaText"></p>
