--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ html, body {
         </div>
 
         <div class="canliFrame">
-            <h2 style="font-family: GothamBold;">Canlı Yayın - Anayasa Mitingi 14 Ocak Pazar günü saat 11.00 #sahipçıkıyoruz</h2>
+            <h2 style="font-family: GothamBold;">Canlı Yayın</h2>
             <iframe width="100%" height="90%" src="https://www.youtube.com/embed/HaHZ0nAjy-A?si=7e4ckTVzKi8x7MAV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
             <div class="line2" style="margin-top: 30px;"></div>
         </div>
