--- a/bizekatil.html
+++ b/bizekatil.html
@@ -172,10 +172,18 @@ html, body {
             <p style="margin-top: -10px;">Umut, Huzur ve Adalet Dolu Türkiye'yi Birlikte Getirelim!</p>
             <div class="line2"></div>
 
+            <form action="https://www.paypal.com/donate" method="post" target="_top" style="align-self: center; margin-top: 30px;">
+                <input type="hidden" name="hosted_button_id" value="5WECJY8AXQD2Y" />
+                <input type="image" src="https://www.paypalobjects.com/de_DE/DE/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Spenden mit dem PayPal-Button" />
+                <img alt="" border="0" src="https://www.paypal.com/de_DE/i/scr/pixel.gif" width="1" height="1" />
+            </form>
+                
+
             <div class="mFrame2">
                 <a class="type" style="background-image: url(assets/chpbayrak-blur.webp);" href="https://chat.whatsapp.com/DQoLxJ5MWLp5vQmlxGFVLR" target="_blank">Haberdar Ol</a>
                 <a class="type uye" style="background-image: url(assets/fdsfsdfsd.webp);" href="https://forms.gle/zVFxUC58WnfgF1NC6" target="_blank">Üye Ol</a>
-                <a class="type" style="background-image: url(assets/sdfdsfds.webp);" href="https://forms.gle/V64HhvZ9EoLVEvWo8" target="_blank">Gönüllü Ol</a>
+                <a class="type uye" style="background-image: url(assets/sdfdsfds.webp);" href="https://forms.gle/V64HhvZ9EoLVEvWo8" target="_blank">Gönüllü Ol</a>
+                <a class="type" style="background-image: url(assets/chpbayrak-blur.webp);" href="https://chat.whatsapp.com/DQoLxJ5MWLp5vQmlxGFVLR" target="_blank">Haberdar Ol</a>
             </div>
         </div>
 
