--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+    <link rel="shortcut icon" type="image/x-icon" href="assets/chpduslogo.webp" />
+
      <!--
         
         MADE BY LEMUSTACHE
