--- a/header.html
+++ b/header.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 
+<head>
+        <link rel="shortcut icon" type="image/x-icon" href="assets/chpduslogo.webp" />
+</head>
+
 <style>
     .headerFrame{
         width: 100%;
