--- a/birligimiz.html
+++ b/birligimiz.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 
+     
+
      <!--
         
         MADE BY LEMUSTACHE
@@ -13,6 +15,7 @@
         --->
 
 
+    <link rel="shortcut icon" type="image/x-icon" href="assets/chpduslogo.webp" />
 
 
     <meta charset="UTF-8">
