--- a/bizekatil.html
+++ b/bizekatil.html
@@ -13,6 +13,7 @@
         --->
 
 
+   <link rel="shortcut icon" type="image/x-icon" href="assets/chpduslogo.webp" />
 
 
     <meta charset="UTF-8">
