--- a/calisma.html
+++ b/calisma.html
@@ -12,7 +12,7 @@
         
         --->
 
-
+   <link rel="shortcut icon" type="image/x-icon" href="assets/chpduslogo.webp" />
 
 
     <meta charset="UTF-8">
