--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         --->
 
 
-
+    <meta name="description" content="CHP Düsseldorf ve Çevresi Resmi Web Sitesidir. 
+    Türkiye'den uzakta yaşayan vatandaşlar için sosyal, kültürel ve siyasi bağlantıları güçlendirmeyi amaçlayan birliğimize 
+    Siz de katılın, bizimle birlikte demokrasiye katkıda bulunun!">
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
