--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         --->
 
 
-    <meta name="description" content="CHP Düsseldorf ve Çevresi Resmi Web Sitesidir. 
+    <meta name="description" content="CHP Düsseldorf ve Çevresi Birliği Resmi Web Sitesi. 
     Türkiye'den uzakta yaşayan vatandaşlar için sosyal, kültürel ve siyasi bağlantıları güçlendirmeyi amaçlayan birliğimize 
     Siz de katılın, bizimle birlikte demokrasiye katkıda bulunun!">
 
