--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ html, body {
                     </div>
     
                     <div class="whatsapp" style="display: flex;flex-direction: column;justify-content: center; align-items: center;">
-                        <a href="https://chat.whatsapp.com/DQoLxJ5MWLp5vQmlxGFVLR" target="_blank" class="fa fa-whatsapp" style="display:flex;color:white;background-color:#00a300; font-size: 30px;width: 75px; height: 75px;  text-align: center; align-items: center; justify-content: center; text-decoration: none; border-radius: 10px;"></a>
+                        <a href="https://whatsapp.com/channel/0029VaMUxTU5a249Rb4U6G36" target="_blank" class="fa fa-whatsapp" style="display:flex;color:white;background-color:#00a300; font-size: 30px;width: 75px; height: 75px;  text-align: center; align-items: center; justify-content: center; text-decoration: none; border-radius: 10px;"></a>
                     </div>
     
                 </div>
