--- a/calisma.html
+++ b/calisma.html
@@ -105,6 +105,14 @@ html, body {
         min-height: 750px;
     }
 
+    .calismaTitle{
+        text-align: center;
+    }
+
+    .calismaDate{
+        text-align: center;
+    }
+
     .calismaImg{
         width: 100%;
         height: 400px;
