--- a/calisma.html
+++ b/calisma.html
@@ -129,8 +129,14 @@ html, body {
         background-color: aliceblue;
     }
 
+    .calismaText figure{
+        float: right;
+        margin-right: 20px;
+        width: 100%;
+    }
+
     .calismaText{
-        word-break: break-all;
+        word-break: normal;
     }
 
 </style>
