--- a/index.html
+++ b/index.html
@@ -262,14 +262,12 @@ html, body {
         .VidBttn{
             width: 200px; 
             height: 75px;  
-
-            margin-top: 10px;
         }
 
         .videoFrame{
             background-color: white;
         }
-
+        
         .readMoreBtn{
             margin-top: 0px;
         }
@@ -361,6 +359,14 @@ html, body {
     @media screen and (max-width:800px) {
         .iletisimMap{
             display: none;
+        }
+
+        .gundemFrame{
+            width: 90%;
+        }
+
+        .canliFrame{
+            width: 90%;
         }
     }
 
@@ -622,7 +628,7 @@ html, body {
         </div>
 
         <div class="canliFrame">
-            <h2 style="font-family: GothamBold; align-self: flex-start;">Canlı Yayın</h2>
+            <h2 style="font-family: GothamBold; align-self: flex-start;">CHP DUS TV</h2>
             <iframe width="100%" height="90%" src="https://www.youtube.com/embed/HaHZ0nAjy-A?si=7e4ckTVzKi8x7MAV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>            
             <div class="line2" style="margin-top: 30px;"></div>
         </div>
