--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@ html, body {
         width: 100%; height: 75%; background-color: var(--kirmizi); display: flex; align-items: center; justify-content:center;
     }
 
-    .bizeKatilIMG{width: 30%; height: 125%; background-image: url(assets/bizekatilimg.jpg);}
+    .bizeKatilIMG{width: 30%; height: 125%; background-image: url(assets/bizekatilimg.jpeg);background-position: center;}
 
     .bizeKatilDetailsFrame{
         width: 45%; height: 100%; display: flex;align-items: center;flex-direction: column;justify-content: center; color: white;
