--- a/calismalar.html
+++ b/calismalar.html
@@ -234,7 +234,7 @@ html, body {
                 // test.appendChild(contentObject)
 
                         calismaDiv = document.createElement("a")
-                        calismaDiv.href = "/calisma.html?"+id
+                        calismaDiv.href = "/calisma.html?"+id+"/"+title
                         calismaDiv.classList.add("calisma")
 
                         calismaImg = document.createElement("div")
