--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <meta property="og:title" content="CHP Düsseldorf ve Çevresi Birliği" />
+    <meta property="og:image" content="/assets/chpduslogo.webp" />
+    <meta property="og:description " content="CHP Düsseldorf ve Çevresi Birliği Resmi Websitesi!" />
+
 
     <!------------------------HEADER & FOOTER LOAD--------------------------------------------------------------------------------------------->
     
